Modified schema to support definition modes: online and offline.  Refactored client to introduce a new block configuration panel and mocked up vertical tabs for studio and a dashboard view.

--- a/service/src/main/resources/python_driver.mustache
+++ b/service/src/main/resources/python_driver.mustache
@@ -7,7 +7,7 @@
 blocks_to_execute = []
 
 <%#blocks%>
-<%variableName%> = <%definitionName%>('<%name%>','<%uniqueName%>')
+<%variableName%> = <%definitionName%>('<%name%>','<%id%>')
 <%variableName%>.parameters = {<%& parameters%>}
 <%variableName%>.input_connectors = {<%& inputs%>}
 blocks_to_execute.append(<%variableName%>)
