--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -1,21 +1,21 @@
-/*
- * Base structure
- */
+
 
 html, body { height: 100%; }
 body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overflow: hidden; }
 
-#studio-wrapper {
-    width: 100%;
-    height: 100%;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-    -webkit-transition: .3s ease all;
-    transition: .3s ease all;
-}
+/* main layout  */
+#main-tabs { display: block; position: relative; float: left; height: 100%; width: 70px; padding: 50px 0 0 0; margin: 0; background-color: #b5b5b5; }
+#main-tabs .vertical-tab.active { background-color: #e5e5e5; color: #737373; border-left: 4px solid #1f77b4; }
+#main-content { display: block; position: relative; float: left; height: 100%; width: -webkit-calc(100% - 70px); overflow: hidden; }
 
+/*
+ * Studio
+ */
+
+#studio-wrapper { width: 100%; height: 100%; -webkit-transform: translateX(0); transform: translateX(0); -webkit-transition: .3s ease all; transition: .3s ease all; }
 #studio-wrapper.blur-background { -webkit-filter: blur(3px); filter: blur(3px); }
 
+/* navigation bar */
 .navbar { background-color: #f5f5f5; margin: 0; padding: 0; border: 0; border-radius: 0px }
 .navbar-btn { width: 40px; }
 .navbar-title { display: inline-block; font-size: 1.4em; line-height: 50px; margin: 0 0 0 20px; padding: 0; color: #737373; }
@@ -24,23 +24,28 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
 .navbar-tab:hover { color: #262626; border-color: #3182bd; }
 .navbar-tab.selected { font-weight: bold; color: #262626; border-color: #3182bd; }
 
+/* canvases */
 #studio-container { position: relative; perspective: 1200px; height: -webkit-calc(100% - 50px); height: -moz-calc(100% - 50px); height: calc(100% - 50px); }
 #studio-canvases { height: 100%; transition: transform 0.6s; transform-origin: right center; transform-style: preserve-3d; }
 .studio-canvas { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: #e5e5e5; backface-visibility: hidden; }
 #offline-canvas { transform: rotateY(0deg); }
 #online-canvas { transform: rotateY(180deg); }
 #studio-canvases.flipped { transform: translateX( -100% ) rotateY( -180deg ); }
+
+/* studio properties */
+#studio-properties { box-shadow: 0px 6px 12px rgba(0,0,0,0.175); }
+
 .diagram-container { position: relative; width: 100%; height: 100%; background-color: #e5e5e5; overflow-y: scroll; }
 
 #library-browser{
     position: absolute;
     z-index: 1000;
-    top: 120px;
+    top: 70px;
     left: 15px;
     width: 180px;
-    height: -webkit-calc(100% - 135px);
-    height: -moz-calc(100% - 135px);
-    height: calc(100% - 135px);
+    height: -webkit-calc(100% - 85px);
+    height: -moz-calc(100% - 85px);
+    height: calc(100% - 85px);
     border: 1px solid #989898;
     background-color: white;
     box-shadow: 0px 6px 12px rgba(0,0,0,0.175);
@@ -77,8 +82,7 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
 .studio-controls.ng-leave { -webkit-animation: fadeOut 0.6s; }
 .studio-controls.ng-enter { -webkit-animation: fadeIn 0.6s; }
 #library-controls { top: 15px; left: 15px; }
-#offline-controls, #online-controls { top: 15px; right: 15px; }
-#offline-controls button.diagram-evaluating { color: #2ca02c; }
+button.diagram-evaluating { color: #2ca02c; }
 #grouping-controls { top: 70px; right: 15px; }
 
 #studio-wrapper.show-sidebar {
@@ -316,7 +320,7 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
 
 #chart-tabs { display: block; position: relative; float: left; height: 100%; width: 70px; margin: 0; padding: 0; background-color: #e5e5e5; }
 .vertical-tabs { list-style-type: none; margin: 0; padding: 0; }
-.vertical-tab { text-align: center; margin: 5px 0 5px 5px; padding: 5px 0 5px 0; color: #666; cursor: pointer; border-radius: 6px 0 0 6px; border-top: 1px solid transparent; border-bottom: 1px solid transparent; border-left: 1px solid transparent; }
+.vertical-tab { text-align: center; margin: 0 0 5px 10px; padding: 5px 0 5px 0; color: #666; cursor: pointer; border-radius: 6px 0 0 6px; border-top: 1px solid transparent; border-bottom: 1px solid transparent; border-left: 1px solid transparent; }
 .vertical-tab:hover { color: #3182bd; }
 .vertical-tab.active { background-color: #f9f9f9; }
 .tab-icon { margin: 0; padding: 0; }
@@ -454,3 +458,25 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
     z-index: 1000;
     color: #3182bd;
 }
+
+/* panel */
+.emr-panel { position: absolute; background-color: #f5f5f5; border: 1px solid #ccc; border-radius: 6px; z-index: 1; }
+.emr-panel-header { position: relative; width: 100%; height: 40px; border-radius: 6px; padding: 2px; cursor: move; }
+.emr-panel-footer { position: relative; width: 100%; height: 10px; background-color: #fff; border-radius: 0 0 6px 6px; }
+.emr-panel-footer .btn+.btn { margin-left: 10px; }
+.emr-panel-container { position: relative; background-color: #fff; border-top: 1px solid #ccc; height: -webkit-calc(100% - 51px); width: 100%; padding-top: 10px; }
+.emr-panel-controls { position: absolute; width: 100%; top: 0; left: 0; padding: 4px; }
+.emr-panel-controls .btn { width: 34px; }
+.emr-panel-controls .btn+.btn { margin-right: 4px; }
+.emr-panel-content { height: 100%; width: 100%; overflow-x: hidden; overflow-y: scroll; }
+.emr-panel.minimized .emr-panel-container, .emr-panel.minimized .emr-panel-footer { display:none; }
+.emr-panel-icon { float: left; width: 36px; height: 36px; line-height: 36px; text-align: center; vertical-align: middle; border-radius: 100%; background-color: #1f77b4; font-size: 20px; color: #fff; }
+.emr-panel-minimize { float: right; width: 20px; height: 36px; line-height: 36px; vertical-align: middle; }
+.emr-panel-minimize i { cursor: pointer; }
+.emr-panel-title { height: 36px; line-height: 36px; width: -webkit-calc(100% - 74px); margin-left: 10px; background-color: transparent; border-color: transparent; font-size: 1.1em; }
+
+/* resizable controls */
+.resizable-handle { position: absolute; font-size: 0.1px; }
+.resizable-e { cursor: e-resize; width: 7px; height: 100%; top: 0; right:-5px; }
+.resizable-s { cursor: s-resize; width: 100%; height: 7px; left: 0; bottom:-5px; }
+.resizable-se { cursor: se-resize; width: 16px; height: 16px; right: 0; bottom: 0; }
