Adjusted the main vertical tabs style.

--- a/studio/app/views/index.scala.html
+++ b/studio/app/views/index.scala.html
@@ -36,7 +36,7 @@
                     <div class="tab-text">Studio</div>
                 </li>
                 <li class="vertical-tab">
-                    <div class="tab-icon"><i class="fa fa-pie-chart fa-2x"></i></div>
+                    <div class="tab-icon"><i class="fa fa-tachometer fa-2x"></i></div>
                     <div class="tab-text">Dashboard</div>
                 </li>
             </ul>
