--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -143,13 +143,12 @@
 
                     <diagram id="offline-diagram"
                              view-model="diagramViewModel"
-                             on-configure="onBlockConfigure"
-                             on-selection="onBlockSelection"
                              on-deselection="onDiagramDeselection"
+                             on-display="onBlockDisplay"
+                             on-selection="onBlockSelection"
                              nodes="nodes"
                              library="library"
                              load-sources="loadSources"
-                             get-block-data="getBlockData"
                              blur-background="blurBackground"></diagram>
 
                 </div>
