Updated explore block to support x y scatter.  Implemented file drag drop.

--- a/studio/app/views/index.scala.html
+++ b/studio/app/views/index.scala.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/grids/grids.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagramViewModel.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagram.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("scripts/components/files/fileDrop.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/shared/shared.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/popup/popupService.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/modal/modal.js")"></script>
@@ -21,6 +22,7 @@
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagramController.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/blockDataViewer/blockDataViewer.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/app.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("scripts/services/colorService.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/services/diagramService.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/views/analyticControllers.js")"></script>
 }
