--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -79,6 +79,10 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
 
 #browser-container { position: relative; width: 100%; height: 100%; overflow-x: hidden; }
 
+/* file dragging */
+#dropTarget { position: absolute; visibility: hidden; pointer-events: none; width: calc(100% - 20px); height: calc(100% - 20px); margin: 10px; z-index: 2; border: 4px dashed #989898; font-size: 3em; color: #989898; text-align: center; padding-top: 50px; }
+.dragging-file #dropTarget { visibility: visible; }
+
 /* studio canvas controls */
 .studio-controls { position: absolute; box-shadow: 0px 6px 12px rgba(0,0,0,0.125); z-index: 2; }
 .studio-controls button { width: 40px; }
@@ -318,19 +322,52 @@ button.diagram-evaluating { color: #2ca02c; }
 .emr-modal-footer { text-align: right; padding-right: 20px; }
 .emr-modal-footer .btn+.btn { margin-left: 20px; }
 
-/* charts view */
-#charts-container { height: 100%; width: 100%; margin: 0; padding: 0; }
-
-#chart-tabs { display: block; position: relative; float: left; height: 100%; width: 70px; margin: 0; padding: 0; background-color: #e5e5e5; }
+/* explore view */
+#explore-wrapper { height: 100%; width: 100%; margin: 0; padding: 0; }
+#explore-tabs { display: block; position: relative; float: left; height: 100%; width: 70px; margin: 0; padding: 0; background-color: #e5e5e5; }
 .vertical-tabs { list-style-type: none; margin: 0; padding: 0; }
-.vertical-tab { text-align: center; margin: 0 0 5px 10px; padding: 5px 0 5px 0; color: #666; cursor: pointer; border-radius: 6px 0 0 6px; border-top: 1px solid transparent; border-bottom: 1px solid transparent; border-left: 1px solid transparent; }
+.vertical-tab { text-align: center; margin: 0 0 5px 3px; padding: 5px 0 5px 0; color: #666; cursor: pointer; border-radius: 6px 0 0 6px; border-top: 1px solid transparent; border-bottom: 1px solid transparent; border-left: 1px solid transparent; }
 .vertical-tab:hover { color: #3182bd; }
 .vertical-tab.active { background-color: #f9f9f9; }
 .tab-icon { margin: 0; padding: 0; }
 .tab-text { margin: 0; padding: 0; font-size: 0.8em; }
 
-#chart-section { display: block; position: relative; float: left; height: 100%; width: -webkit-calc(100% - 70px); }
+#explore-container { display: block; position: relative; float: left; height: 100%; width: -webkit-calc(100% - 70px); color: #666; }
+.explore-content { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: #f9f9f9; visibility: hidden; }
+.explore-content.active { visibility: visible; }
+.chart-content { position: relative; float: left; height: 100%; }
+#chart-menu-container { width: 25%; border-right: 1px solid #e5e5e5; }
+#chart-container { width: 75%; background-color: #fff; }
+#chart-menu { width: 100%; height: -webkit-calc(100% - 30px); margin-top: 30px; padding: 4px 10px 4px 10px; overflow-x: hidden; overflow-y: scroll; }
+.chart-menu-header { width: 100%; height: 30px; color: #666; line-height: 30px; font-size: 1.2em; }
+.chart-menu-header i+i { margin-left: 6px; }
+.chart-menu-item { margin: 10px 0 10px 0; }
+.add-series { background-color: #fff; border-radius: 6px; border: 2px dashed #989898; padding: 10px; }
+.add-series-item { margin-bottom: 8px; }
+.add-series-footer { height: 34px; }
+.chart-series { position: relative; background-color: #fff; margin: 10px 0 10px 0; padding: 6px; outline: 1px solid #e9e9e9; }
+.series-color { float: left; width: 28px; height: 28px; line-height: 28px; border-radius: 50%; text-align: center; vertical-align: middle; }
+.series-coords { float: left; margin-left: 5px; }
 
+.explore-toolbar { position: absolute; top: 0; left: 0; width: 100%; height: 30px; margin: 0; padding: 4px 10px 4px 10px; background-color: #f9f9f9; font-size: 1.2em; }
+.toolbar-icon { position: relative; height: 21px; width: 21px; cursor: pointer; }
+.toolbar-icon:hover { color: #3182bd; }
+.toolbar-icon i { font-size: 20px; }
+#collapse-icon { position: relative; height: 100%; }
+#collapse-icon:before, #collapse-icon:after { content: ""; position: absolute; top: 0; left: 50%; width: 2px; height: 100%; background-color: #666; }
+#collapse-icon:before { -webkit-transform: rotate(45deg); }
+#collapse-icon:after { -webkit-transform: rotate(-45deg); }
+#collapse-icon:hover:before, #collapse-icon:hover:after { background-color: #3182bd; }
+
+#explore-chart { display: block; position: relative; width: 100%; height: 100%; }
+
+.feature-cards { width: 100%; height: 100%; overflow-x: hidden; overflow-y: auto; }
+.feature-card { position: relative; background-color: #fff; margin: 10px; padding: 10px; outline: 1px solid #e9e9e9; color: #666; }
+.feature-header { font-size: 1.3em; }
+.feature-item-name { padding-left: 15px; color: #aaa; }
+.feature-item-value { padding-right: 15px; }
+
+/*
 .chart-menus { position: absolute; top: 0; left: 0; background-color: #f9f9f9; height: 100%; width: 25%; border-right: 1px solid #e5e5e5; -webkit-transition: width 0.75s ease-in; }
 .chart-menus-fade.ng-hide-remove { transition: 0.5s linear all; opacity: 1; }
 .chart-menus-fade.ng-hide { transition: 0.5s linear all; opacity: 0; }
@@ -401,31 +438,6 @@ button.diagram-evaluating { color: #2ca02c; }
     -webkit-transform: rotateY( 360deg );
 }
 
-.feature-name { float: left; margin-left: 10px; line-height: 28px; vertical-align: middle; }
-.feature-name:hover { cursor: default;}
-.feature-ellipsis { float: right; line-height: 28px; vertical-align: middle; }
-.feature-ellipsis:hover { cursor: pointer; color: #3182bd }
-.feature-stats { width: 100%; height: auto; margin-top: 12px; }
-.feature-stats-fade.ng-hide-remove { transition: 1s linear all; opacity: 1; }
-.feature-stats-fade.ng-hide { transition: 0.5s linear all; opacity: 0; }
-.feature-stats-item { width: calc(100% - 37px); height: 20px; margin-top: 5px; margin-left: 20px }
-.feature-stats-name { float: left; }
-.feature-stats-value { float: right; }
-
-.chart-toolbar { position: absolute; top: 0; left: 0; width: 100%; margin: 0; padding: 4px 16px 4px 10px; }
-.toolbar-left { position: relative; float: left; }
-.toolbar-center { float: left; width: calc(100% - 25px); height: 21px; inline-height: 21px; text-align: center; }
-.toolbar-right { position: relative; float: right; }
-.toolbar-icon { position: relative; height: 21px; width: 21px; color: #666; cursor: pointer; }
-.toolbar-icon:hover { color: #3182bd; }
-.toolbar-icon i { font-size: 20px; }
-
-#collapse-icon { position: relative; height: 100%; }
-#collapse-icon:before, #collapse-icon:after { content: ""; position: absolute; top: 0; left: 50%; width: 2px; height: 100%; background-color: #666; }
-#collapse-icon:before { -webkit-transform: rotate(45deg); }
-#collapse-icon:after { -webkit-transform: rotate(-45deg); }
-#collapse-icon:hover:before, #collapse-icon:hover:after { background-color: #3182bd; }
-
 .chart-content { position: absolute; top: 0; right: 0; height: 100%; width: 75%; -webkit-transition: width 0.75s ease-in; }
 .chart-content .chart-toolbar { background-color: #f9f9f9; border-bottom: 1px solid #e9e9e9; }
 .expand { width: 100%; -webkit-transition: width 0.75s ease-out; }
@@ -461,6 +473,7 @@ button.diagram-evaluating { color: #2ca02c; }
     z-index: 1000;
     color: #3182bd;
 }
+*/
 
 /* panel */
 .emr-panel { position: absolute; background-color: #f5f5f5; border: 1px solid #ccc; border-radius: 6px; z-index: 1; }
