Persisted parameter overrides.

--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -98,6 +98,9 @@
                         <button type="button" class="btn btn-default navbar-btn" ng-click="debug($event)">
                             <i class="fa fa-bug"></i>
                         </button>
+                        <button type="button" class="btn btn-default navbar-btn" ng-click="save($event)">
+                            <i class="fa fa-save"></i>
+                        </button>
                         <button type="button" class="btn btn-default navbar-btn" ng-click="deploy($event)">
                             <i class="fa fa-rocket"></i>
                         </button>
@@ -139,15 +142,6 @@
                         <i class="fa fa-cubes"></i>
                     </button>
                 </div>
-
-                <!--<div id="" class="btn-group">
-                    <button type="button" class="btn btn-default">
-                        <i class="fa fa-wrench"></i>
-                    </button>
-                    <button type="button" class="btn btn-default">
-                        <i class="fa fa-save"></i>
-                    </button>
-                </div>-->
 
                 <div class="diagram-container">
 
