--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -333,7 +333,7 @@ button.diagram-evaluating { color: #2ca02c; }
 .tab-text { margin: 0; padding: 0; font-size: 0.8em; }
 
 #explore-container { display: block; position: relative; float: left; height: 100%; width: -webkit-calc(100% - 70px); color: #666; }
-.explore-content { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: #f9f9f9; visibility: hidden; }
+.explore-content { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: #f9f9f9; visibility: hidden; overflow: hidden; }
 .explore-content.active { visibility: visible; }
 .chart-content { position: relative; float: left; height: 100%; }
 #chart-menu-container { width: 25%; border-right: 1px solid #e5e5e5; }
@@ -366,6 +366,22 @@ button.diagram-evaluating { color: #2ca02c; }
 .feature-header { font-size: 1.3em; }
 .feature-item-name { padding-left: 15px; color: #aaa; }
 .feature-item-value { padding-right: 15px; }
+
+/* features grid */
+.grid-container { overflow: hidden; width: 100%; height: 100%; }
+.grid-column-container { position: absolute; background: #f9f9f9; top: 0; height: 46px; z-index: 2; }
+.grid-column-headers { position: absolute; }
+.grid-column-header { position: absolute; height: 36px; line-height: 36px; top: 0; background: #fff; border: 1px solid #e9e9e9; vertical-align: middle; padding-left: 10px; }
+.grid-row-container { position: absolute; background: #f9f9f9; left: 0; z-index: 2; }
+.grid-row-headers { position: absolute; }
+.grid-row-header { position: absolute; left: 0; background: #fff; border: 1px solid #e9e9e9; }
+.grid-row-header div { height: 36px; line-height: 36px; vertical-align: middle; text-align: right; padding-right: 10px; }
+.grid-row-header div+div { border-top: 1px solid #e9e9e9; }
+#grid-content-container { position: relative; width: 100%; height: 100%; overflow: scroll; }
+.grid-content { position: absolute; }
+.grid-content-column { position: absolute; background: #fff; border: 1px solid #e9e9e9; }
+.grid-content-column div { height: 36px; line-height: 36px; vertical-align: middle; text-align: right; padding-right: 10px; }
+.grid-content-column div+div { border-top: 1px solid #e9e9e9; }
 
 /*
 .chart-menus { position: absolute; top: 0; left: 0; background-color: #f9f9f9; height: 100%; width: 25%; border-right: 1px solid #e5e5e5; -webkit-transition: width 0.75s ease-in; }
@@ -477,7 +493,7 @@ button.diagram-evaluating { color: #2ca02c; }
 
 /* panel */
 .emr-panel { position: absolute; background-color: #f5f5f5; border: 1px solid #ccc; border-radius: 6px; z-index: 1; }
-.emr-panel-header { position: relative; width: 100%; height: 40px; border-radius: 6px; padding: 2px; cursor: move; }
+.emr-panel-header { position: relative; width: 100%; height: 40px; border-radius: 6px; padding: 2px; }
 .emr-panel-footer { position: relative; width: 100%; height: 10px; background-color: #fff; border-radius: 0 0 6px 6px; }
 .emr-panel-footer .btn+.btn { margin-left: 10px; }
 .emr-panel-container { position: relative; background-color: #fff; border-top: 1px solid #ccc; height: -webkit-calc(100% - 51px); width: 100%; padding-top: 10px; }
@@ -486,7 +502,7 @@ button.diagram-evaluating { color: #2ca02c; }
 .emr-panel-controls .btn+.btn { margin-right: 4px; }
 .emr-panel-content { height: 100%; width: 100%; overflow-x: hidden; overflow-y: scroll; }
 .emr-panel.minimized .emr-panel-container, .emr-panel.minimized .emr-panel-footer { display:none; }
-.emr-panel-icon { float: left; width: 36px; height: 36px; line-height: 36px; text-align: center; vertical-align: middle; border-radius: 100%; background-color: #1f77b4; font-size: 20px; color: #fff; }
+.emr-panel-icon { float: left; width: 36px; height: 36px; line-height: 36px; text-align: center; vertical-align: middle; border-radius: 100%; background-color: #1f77b4; font-size: 20px; color: #fff; cursor: move; }
 .emr-panel-minimize { float: right; width: 20px; height: 36px; line-height: 36px; vertical-align: middle; }
 .emr-panel-minimize i { cursor: pointer; }
 .emr-panel-title { height: 36px; line-height: 36px; width: -webkit-calc(100% - 74px); margin-left: 10px; background-color: transparent; border-color: transparent; font-size: 1.1em; }
