--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -379,9 +379,11 @@ button.diagram-evaluating { color: #2ca02c; }
 .grid-row-header div+div { border-top: 1px solid #e9e9e9; }
 #grid-content-container { position: relative; width: 100%; height: 100%; overflow: scroll; }
 .grid-content { position: absolute; }
+.grid-content-row { position: relative; display: block; width: 100%; }
 .grid-content-column { position: absolute; background: #fff; border: 1px solid #e9e9e9; }
 .grid-content-column div { height: 36px; line-height: 36px; vertical-align: middle; text-align: right; padding-right: 10px; }
 .grid-content-column div+div { border-top: 1px solid #e9e9e9; }
+
 
 /*
 .chart-menus { position: absolute; top: 0; left: 0; background-color: #f9f9f9; height: 100%; width: 25%; border-right: 1px solid #e5e5e5; -webkit-transition: width 0.75s ease-in; }
