Set spark logging level to WARN.  Created a new spark test harness project.

--- a/service/src/main/resources/sparkstreaming_driver.mustache
+++ b/service/src/main/resources/sparkstreaming_driver.mustache
@@ -1,11 +1,14 @@
 {{=<% %>=}}
 
+import org.apache.log4j.PropertyConfigurator
 import org.apache.spark.streaming._
 import scala.util.parsing.json._
 
 <%#packageNames%>
 import <%.%>
 <%/packageNames%>
+
+PropertyConfigurator.configure("log4j.properties")
 
 <%#models%>
 val <%variableName%> = Array(<%arguments%>)
