--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -371,10 +371,10 @@ button.diagram-evaluating { color: #2ca02c; }
 .grid-container { overflow: hidden; width: 100%; height: 100%; }
 .grid-column-container { position: absolute; background: #f9f9f9; top: 0; height: 46px; z-index: 2; }
 .grid-column-headers { position: absolute; }
-.grid-column-header { position: absolute; height: 36px; line-height: 36px; top: 0; background: #fff; border: 1px solid #e9e9e9; vertical-align: middle; padding-left: 10px; }
+.grid-column-header { position: absolute; height: 36px; line-height: 36px; top: 0; background-color: #fff; font-weight: bold; border: 1px solid #e9e9e9; border-bottom: 3px solid #e9e9e9; vertical-align: middle; padding-left: 10px; }
 .grid-row-container { position: absolute; background: #f9f9f9; left: 0; z-index: 2; }
 .grid-row-headers { position: absolute; }
-.grid-row-header { position: absolute; left: 0; background: #fff; border: 1px solid #e9e9e9; }
+.grid-row-header { position: absolute; left: 0; background: #fff; font-weight: bold; border: 1px solid #e9e9e9; border-right: 3px solid #e9e9e9; }
 .grid-row-header div { height: 36px; line-height: 36px; vertical-align: middle; text-align: right; padding-right: 10px; }
 .grid-row-header div+div { border-top: 1px solid #e9e9e9; }
 #grid-content-container { position: relative; width: 100%; height: 100%; overflow: scroll; }
