Formatted data in feature grid and also fixed scroll issue.

--- a/studio/public/scripts/components/grids/featuresGrid.html
+++ b/studio/public/scripts/components/grids/featuresGrid.html
@@ -14,16 +14,16 @@
 
             <div class="grid-row-header" ng-style="{ width: rowHeaderWidth }">
 
-                <div>Count</div>
+                <div>Observation Count</div>
                 <div>Mean</div>
-                <div>Std Dev</div>
-                <div>Min</div>
-                <div>25%</div>
-                <div>50%</div>
-                <div>75%</div>
-                <div>Max</div>
-                <div>NaN</div>
-                <div>Type</div>
+                <div>Standard Deviation</div>
+                <div>Minimum Value</div>
+                <div>25% of values less than</div>
+                <div>50% of values less than</div>
+                <div>75% of values less than</div>
+                <div>Maximum Value</div>
+                <div>NaN Observation Count</div>
+                <div>Data Type</div>
 
             </div>
 
