--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -377,7 +377,7 @@ button.diagram-evaluating { color: #2ca02c; }
 .grid-row-header { position: absolute; left: 0; background: #fff; font-weight: bold; border: 1px solid #e9e9e9; border-right: 3px solid #e9e9e9; }
 .grid-row-header div { height: 36px; line-height: 36px; vertical-align: middle; text-align: right; padding-right: 10px; }
 .grid-row-header div+div { border-top: 1px solid #e9e9e9; }
-#grid-content-container { position: relative; width: 100%; height: 100%; overflow: scroll; }
+#grid-content-container { position: relative; width: 100%; height: 100%; overflow: auto; }
 .grid-content { position: absolute; }
 .grid-content-row { position: relative; display: block; width: 100%; }
 .grid-content-column { position: absolute; background: #fff; border: 1px solid #e9e9e9; }
